--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,17 +3,5 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "wc-cs",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/wc-cs/bin/Debug/net8.0/wc-cs",
-            "args": ["-w", "test.txt"],
-            "cwd": "${workspaceFolder}/wc-cs",
-            "console": "internalConsole",
-            "stopAtEntry": false
-        }
-    ],
+    "configurations": [],
 }
